修复测试源码Java 17集合API兼容